--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <div class="result" id="legsResult">🦶</div>
     </div>
   </div>
-  <p>(Movement Vocabulary by Linzie Mullins)</p>
+  <p>(Movement Vocabulary by Freedom Brass)</p>
 
   <script>
     const face = ["SMILE", "FROWN", "SNEER", "POUT", "SCOWL", "GRIN", "YAWN", "CHEW", "WINCE", "GRIMACE", "SQUINT", "BLINK", "GAPE", "STARE", "GLARE", "LEER"];
